--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,18 @@ python:
 virtualenv:
   system_site_packages: true
 
-before_install:
+install:
   - sudo apt-get update -qq
   - sudo apt-get install -y python-dev
   - sudo apt-get install -y python-numpy
   - sudo apt-get install -y python-scipy
   - sudo apt-get install -y python-pip
-
-install:
+  - sudo apt-get install -y cython
+  - sudo apt-get install -y python-mpi4py
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install --allow-external Polygon2 --allow-unverified Polygon2 Polygon2; fi
   - pip install nose
   - pip install matplotlib
+  - sudo sh hdf5_h5py_install.sh
 
 script:  nosetests
 
