--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 virtualenv:
   system_site_packages: true
 
-install:
+before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y python-dev
   - sudo apt-get install -y python-numpy
@@ -18,7 +18,10 @@ install:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install --allow-external Polygon2 --allow-unverified Polygon2 Polygon2; fi
   - pip install nose
   - pip install matplotlib
-  - sudo sh hdf5_h5py_install.sh
+  - sudo bash hdf5_h5py_install.sh
+
+install:
+  - sudo python setup.py install
 
 script:  nosetests
 
