--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ virtualenv:
 
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install -y build-essential
+  - sudo apt-get install -y libopenmpi-dev
   - sudo apt-get install -y python-dev
   - sudo apt-get install -y python-numpy
   - sudo apt-get install -y python-scipy
@@ -16,8 +18,8 @@ before_install:
   - sudo apt-get install -y cython
   - sudo apt-get install -y python-mpi4py
   - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then pip install --allow-external Polygon2 --allow-unverified Polygon2 Polygon2; fi
-  - pip install nose
-  - pip install matplotlib
+  - sudo apt-get install -y python-nose
+  - sudo apt-get install -y python-matplotlib
   - sudo bash hdf5_h5py_install.sh
 
 install:
